@@ -1,2 +1,3 @@
 from .base import BaseTransport  # noqa
 from .filesystem import FilesystemTransport  # noqa
+from .ftps import FTPSTransport  # noqa
